--- a/3D Shadow.vcxproj
+++ b/3D Shadow.vcxproj
@@ -217,6 +217,12 @@
     <None Include="Shaders\SkyBox_vert.glsl" />
     <None Include="Shaders\vertexShader.glsl" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="项目演示.mp4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="help.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
