--- a/3D Shadow.vcxproj.filters
+++ b/3D Shadow.vcxproj.filters
@@ -287,4 +287,10 @@
       <Filter>Shaders\Particle</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="项目演示.mp4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="help.txt" />
+  </ItemGroup>
 </Project>
